if deleted file is profile pic set default

--- a/templates/profilesystem/index.html
+++ b/templates/profilesystem/index.html
@@ -1144,6 +1144,9 @@
                         type: 'success'
                     }).show();
                     self.parent().parent().remove();
+                    if (self.attr('data-img-id') === 'p') {
+                        $(".useravatar").attr('src', "{% static "dist/img/placeholder-user.png" %}");
+                    }
                 }
             });
         });
