EBR-66 EBR-67 done

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/emojione/2.2.6/assets/css/emojione.min.css"/>
     <link rel="stylesheet" href="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?n=2">
+    <link rel="stylesheet" href="{% static "dist/css/AdminLTE.css" %}?n=3">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="{% static "dist/css/skins/_all-skins.min.css" %}">
@@ -104,7 +104,7 @@
             <!-- Logo -->
             <a href="{% url 'dashboard:index' %}" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini">Ekata</span>
+                <span class="logo-mini">EKATA</span>
                 <!-- logo for regular state and mobile devices -->
                 <span class="logo-lg">EKATA</span>
             </a>
@@ -406,6 +406,7 @@
             <div class="tab-content">
                 <!-- Home tab content -->
                 <div class="tab-pane" id="control-sidebar-home-tab">
+                    <!-- hidden untill todo is implemented
                     <h3 class="control-sidebar-heading">{% trans "Todo" %}</h3>
                     <ul class="control-sidebar-menu">
                         <li>
@@ -438,7 +439,7 @@
                             </a>
                         </li>
                     </ul>
-                    <!-- /.control-sidebar-menu -->
+                    /.control-sidebar-menu -->
 
                 </div>
                 <!-- /.tab-pane -->
