--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -4,7 +4,7 @@
     {% trans "Dashboard" %}
 {% endblock title %}
 {% block extrastyle %}
-    <link rel="stylesheet" href="{% static "dist/css/dashboard.css" %}">
+    <link rel="stylesheet" href="{% static "dist/css/dashboard.css" %}?v=1">
     <style>
         .popovercontent {
             display: none;
