--- a/templates/useraccount/index.html
+++ b/templates/useraccount/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n staticfiles %}
 {% block extrastyle %}
-    <link rel="stylesheet" href="{% static "dist/css/dashboard.css" %}">
+    <link rel="stylesheet" href="{% static "dist/css/dashboard.css" %}?v=1">
 {% endblock extrastyle %}
 {% block title %}
     {% trans "Account" %}
