usersnap added again

--- a/templates/base.html
+++ b/templates/base.html
@@ -996,7 +996,7 @@
     </script>
     {% block extrascripts %}
     {% endblock extrascripts %}
-    <!--<script type="text/javascript">
+    <script type="text/javascript">
         (function() {
             var s = document.createElement("script");
             s.type = "text/javascript";
@@ -1006,7 +1006,7 @@
             var x = document.getElementsByTagName('script')[0];
             x.parentNode.insertBefore(s, x);
         })();
-    </script>-->
+    </script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async='async'></script>
     <script>
     var OneSignal = window.OneSignal || [];
