--- a/templates/landing/newsdetail.html
+++ b/templates/landing/newsdetail.html
@@ -1,5 +1,5 @@
 {% extends "landing_base.html" %}
-{% load markdown_deux_tags i18n %}
+{% load i18n %}
 {% block title %}
     {{ news.title|truncatewords:10 }}
 {% endblock %}
