--- a/templates/autosignup/index.html
+++ b/templates/autosignup/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n staticfiles %}
 {% block title %}
-    {% trans "MyAccunts" %}
+    {% trans "MyAccounts" %}
 {% endblock %}
 {% block content_header %}
     <h1>
@@ -45,7 +45,7 @@
                                     <h4>{% trans "Grantcoin" %}</h4>
                                 </div>
                                 <div class="community-actions">
-                                    <a href="#" class="btn btn-block btn-success">{% trans "Signup" %}</a>
+                                    <a href="#" data-community-name='grantcoin' data-toggle="modal" data-target='#signupmodal' class="btn btn-block btn-success">{% trans "Signup" %}</a>
                                 </div>
                             </div>
                         </div>
@@ -73,4 +73,67 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="signupmodal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="">{% trans "Signup to grantcoin" %}</h4>
+          </div>
+          <div class="modal-body" id="signupbody">
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Close" %}</button>
+            <button type="button" class="btn btn-primary" id="signupsubmit">{% trans "Submit" %}</button>
+          </div>
+        </div>
+      </div>
+    </div>
+{% endblock %}
+{% block extrascripts %}
+    <script type="text/javascript">
+        $("#signupmodal").on('show.bs.modal', function(e){
+            var link = '{% url 'autosignup:index' %}?community_name=' + $(e.relatedTarget).attr('data-community-name');
+            var self = $(this);
+            $.ajax({
+                url: link,
+                success: function(data){
+                    $("#signupbody").load(data, function(){
+                        $("#gears").hide();
+                    });
+                }
+            })
+        });
+        $("#signupsubmit").click(function(){
+            var frm = $("#signupform");
+            frm.hide();
+            $("#gears").show();
+            $.ajax({
+                url: frm.attr('action'),
+                type: frm.attr('method'),
+                data: frm.serialize(),
+                success: function(data){
+                    $("#signupbody").load(data, function(){
+                        $("#gears").hide();
+                    });
+                },
+                error: function(data) {
+                    $("#signupbody").html(data.responseText, function(){
+                        $("#gears").hide();
+                    });
+                }
+            });
+        });
+        $(document).on('click', '.signuplink', function(){
+            var link = $(this).attr('href');
+            var frm = $("#signupform");
+            frm.hide();
+            $("#gears").show();
+            $("#signupbody").load(link, function () {
+                $("#gears").hide();
+            });
+            return false;
+        })
+    </script>
 {% endblock %}
