--- a/templates/autosignup/additional_step.html
+++ b/templates/autosignup/additional_step.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="col-xs-4">
-            <div class="signupformtab">
+            <div class="signupformtab signupinactive">
                 <h4><a href="{% url 'autosignup:step_1_signup' community_signup.id %}" class="signuplink">{% trans "Name and Address" %}</a></h4>
             </div>
             <div class="signupformtab signupinactive">
@@ -11,16 +11,13 @@
             <div class="signupformtab signupinactive">
                 <h4><a href="{% url 'autosignup:step_3_signup' community_signup.id %}"  class="signuplink" >{% trans "Phone No" %}</a></h4>
             </div>
-            {% if community_signup.failed_auto_signup %}
             <div class="signupformtab">
                 <h4><a href="{% url 'autosignup:additional_step' community_signup.id %}"  class="signuplink" >{% trans "Docs" %}</a></h4>
             </div>
-            {% endif %}
         </div>
         <div class="col-xs-8">
-            <form role="form" method="POST" id="signupform" action="{% url 'autosignup:step_1_signup' community_signup.id %}" data-submit='true'>
+            <form role="form" method="POST" id="signupform" action="{% url 'autosignup:additional_step' community_signup.id %}" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ uform|as_bootstrap }}
                 {{ form|as_bootstrap }}
             </form>
             <div class="text-center" id="gears">
