--- a/templates/autosignup/step_3_form.html
+++ b/templates/autosignup/step_3_form.html
@@ -9,8 +9,13 @@
                 <h4><a href="{% url 'autosignup:step_2_signup' community_signup.id %}" class="signuplink">{% trans "Email" %}</a></h4>
             </div>
             <div class="signupformtab">
-                <h4><a href="{% url 'autosignup:step_3_signup' community_signup.id %}">{% trans "Phone No" %}</a></h4>
+                <h4><a href="{% url 'autosignup:step_3_signup' community_signup.id %}" class="signuplink">{% trans "Phone No" %}</a></h4>
             </div>
+            {% if community_signup.failed_auto_signup %}
+            <div class="signupformtab">
+                <h4><a href="{% url 'autosignup:additional_step' community_signup.id %}"  class="signuplink" >{% trans "Docs" %}</a></h4>
+            </div>
+            {% endif %}
         </div>
         <div class="col-xs-8">
             <form role="form" method="POST" id="signupform" action="{% url 'autosignup:step_3_signup' community_signup.id %}">
