--- a/templates/autosignup/index.html
+++ b/templates/autosignup/index.html
@@ -78,7 +78,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="">{% trans "Signup to grantcoin" %}</h4>
+            <h4 class="modal-title" id="">{% trans "Signup to Grantcoin" %}</h4>
           </div>
           <div class="modal-body" id="signupbody">
 
