updated some string

--- a/templates/base.html
+++ b/templates/base.html
@@ -348,7 +348,7 @@
             <section>
                 <div class="alert alert-success sysalert text-center">
                     <h4>
-                        <a href="{% url 'emailtosms:index' %}">{% trans "Help us to find working email to sms providers" %}</a>
+                        <a href="{% url 'emailtosms:index' %}">{% trans "Help us to find working email to sms providers for your mobile number" %}</a>
                     </h4>
                 </div>
                 {% if UPDATES %}
