--- a/templates/emailtosms/verifierform.html
+++ b/templates/emailtosms/verifierform.html
@@ -1,8 +1,11 @@
-{% load bootstrap_tags %}
+{% load bootstrap_tags i18n %}
 <form method="post" id="verifierform">
     {% csrf_token %}
     {{ form|as_bootstrap }}
     <div class="text-center">
         <input type="submit" class="btn btn-flat btn-primary" id="verifierformsubmit">
     </div>
+    <a href="{% url 'emailtosms:request_carrier' %}">
+        {% trans "Request to add your carrier if not listed" %}
+    </a>
 </form>
