--- a/templates/autosignup/signups.html
+++ b/templates/autosignup/signups.html
@@ -24,6 +24,9 @@
             <div class="box box-solid">
                 <div class="box-header with-border">
                     <h3>{% trans "Signups" %}</h3>
+                    <div class="pull-right">
+                        <input type="checkbox" {% if accountprovider.signup_is_open %}checked{% endif %} data-toggle="toggle" data-onstyle="success" data-offstyle="danger" data-on="Open" data-off="Closed" id="signup_status">
+                    </div>
                 </div>
                 <div class="box-body" style="min-height: 700px">
                     {% if signups %}
@@ -77,6 +80,17 @@
                         $('#verify').addClass('btn-success');
                     }
                 });
+            });
+        });
+        $('#signup_status').change(function(){
+            var checked = $(this).is(':checked');
+            $.ajax({
+                url: '{% url 'autosignup:set_signup_status' %}',
+                type: 'POST',
+                data: {'status': checked?'on':'off'},
+                success: function (data) {
+                    console.log('success');
+                }
             });
         });
     </script>
